tests/negative/gold/abstract3-test.gold
tests/negative/abstract3-test.toit:9:4: error: Can't instantiate abstract class
  (A).foo
   ^
Compilation failed
